fix image viewer caption width on small displays

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -483,6 +483,7 @@ th {
   max-width: 800px;
   width: 100%;
   background-color: var(--section-background);
+  box-sizing: border-box;
   padding: 1rem;
   border-radius: 0.75rem;
   box-shadow: 0 5px 10px rgba(0,0,0,0.5);
